force-app/main/default/objects/PAROutbox__c/PAROutbox__c.object-meta.xml
<CustomObject>
    <label>PAR Outbox</label>
    <nameField>
        <displayFormat>PAR-{00000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAR Outbox</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>