force-app/main/default/objects/PAROutbox__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>CorrelationId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>