force-app/main/default/objects/PAROutbox__c/fields/NextRetryAt__c.field-meta.xml
<CustomField>
    <fullName>NextRetryAt__c</fullName>
    <label>NextRetryAt</label>
    <type>DateTime</type>
</CustomField>