force-app/main/default/objects/PAROutbox__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>