force-app/main/default/objects/PAROutbox__c/fields/PriceApprovalRequest__c.field-meta.xml
<CustomField>
    <fullName>PriceApprovalRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Approval Request</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>PAR Outbox</relationshipLabel>
    <relationshipName>PAR_Outbox</relationshipName>
    <type>Lookup</type>
</CustomField>